--- a/Flex Style.css
+++ b/Flex Style.css
@@ -11,7 +11,7 @@ body > div{
 body{
     background-color: black;
 }
-body > div > h1,h2,h3{
+body > div > h1,h2,h3,pre{
     color: white;
     margin: 10px;
 }
